letsencrypt/manifests/letsencrypt-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: letsencrypt
  labels:
    name: letsencrypt
spec:
  ports:
  - name: http
    port: 80
  selector:
    app: letsencrypt
